tests/paczka1/fuzzy1/81323989.err
Error in line 15: Ax9adE4 A149 88,4
Error in line 31: IKsEjjHzn6 A706 43,2
Error in line 34: A901 A706 11,4
Error in line 35: A901 A149 55,7
